--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,9 @@
 <footer>
 
-  <p>© 2024 Harvey Abantao</p>
+  <% const d = new Date(); %>
+  <% let year = d.getFullYear(); %>
+
+  <p>Copyright © <%= year %> Harvey Abantao</p>
   
 </footer>
 <link rel="preconnect" href="https://fonts.googleapis.com">
