--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,15 +1,49 @@
-<footer>
+<footer class="mt-4" style="background-color: var(--primary-accent); color: var(--text-light);">
+  <div class="container py-4">
+    <div class="row">
+      <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
+        <h5 class="text-uppercase fw-bold">Book Notes</h5>
+        <p class="mb-0">
+          Your personal space for book reviews and notes.
+        </p>
+      </div>
+      <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+        <h5 class="text-uppercase fw-bold">Links</h5>
+        <ul class="list-unstyled mb-0">
+          <li class="mb-2">
+            <a href="#!" class="text-light text-decoration-none">About</a>
+          </li>
+          <li>
+            <a href="#!" class="text-light text-decoration-none">Contact</a>
+          </li>
+        </ul>
+      </div>
+      <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+        <h5 class="text-uppercase fw-bold mb-3">Follow Us</h5>
+        <ul class="list-unstyled d-flex justify-content-center justify-content-lg-start">
+          <li class="me-3">
+            <a href="#!" class="text-light">
+              <i class="bi bi-facebook fs-4"></i>
+            </a>
+          </li>
+          <li>
+            <a href="#!" class="text-light">
+              <i class="bi bi-twitter fs-4"></i>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
 
-  <% const d = new Date(); %>
-  <% let year = d.getFullYear(); %>
-
-  <p>Copyright © <%= year %> Harvey Abantao</p>
-  
+  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+    <% const d = new Date(); %>
+    <% let year = d.getFullYear(); %>
+    © <%= year %> Copyright:
+    <a class="text-light text-decoration-none" href="#">Harvey Abantao</a>
+  </div>
 </footer>
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Shantell+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+</body>
 </html>
